@@ -1,7 +1,12 @@
+import org.aut.models.Profile;
+import org.aut.utils.RequestHandler;
+import org.jetbrains.annotations.NotNull;
 import org.json.JSONObject;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
+import java.io.IOException;
 import java.io.OutputStream;
 import java.net.*;
 import java.net.http.HttpClient;
@@ -12,26 +17,32 @@ import java.time.Duration;
 import org.aut.models.User;
 import org.aut.utils.JsonHandler;
 
+
 @DisplayName("------ Testing requests...")
 public class RequestTest {
     @Test
     @DisplayName("---- adding a user with httpClient")
     public void postProfile() throws Exception {
-        HttpClient client = HttpClient.newHttpClient();
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create("http://localhost:8080/users"))
-                .timeout(Duration.ofSeconds(10))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(new User("kasra@gmail.com", "ali7771222345", "Ali", "akbari", "ll").toString()))
-                .build();
+        Profile profile = new Profile("user719066ad-4efe-8f14", "aaa", "bbb", "ccc", "ddd", "jjj", Profile.Status.JOB_SEARCHER, Profile.Profession.ACTOR, true);
+        File pic = new File("src/test/resources/profile.jpg");
+        File bg = new File("src/test/resources/profile.jpg");
 
-        // Send the request and get the response
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        System.out.println("Response Code: " + response.statusCode());
-        System.out.println("Response headers: " + response.headers().toString());
+        URL url = URI.create("http://localhost:8080/profiles").toURL();
+        HttpURLConnection con = getPostConnection(url);
+        OutputStream out = con.getOutputStream();
 
-        client.close();
+//        RequestHandler.addJson(out, profile.toJson());
+//        RequestHandler.addFile(out, pic);
+//        RequestHandler.addFile(out, bg);
+        out.close();
+
+        if (con.getResponseCode() / 100 == 2) {
+            System.out.println("test result: " + con.getResponseCode());
+        } else {
+            System.out.println("Server returned HTTP code " + con.getResponseCode());
+        }
+        con.disconnect();
     }
 
     @Test
@@ -57,16 +68,16 @@ public class RequestTest {
     @Test
     @DisplayName("---- adding a user with URL")
     public void postUser_Java8() throws Exception {
-        URL url = new URL("http://localhost:8080/users");
+        URL url = URI.create("http://localhost:8080/users").toURL();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod("POST");
-        con.setRequestProperty("Content-Type", "json"); // not needed
+        con.setRequestProperty("Content-Type", "mu"); // not needed
 
         con.setDoInput(true); // enables input stream, no need
         con.setDoOutput(true); // enables output stream
         OutputStream out = con.getOutputStream();
 
-        JsonHandler.sendObject(con.getOutputStream(), new User("ali@gmail.com", "ali1222345", "Ali", "akbari", "k").toJSON());
+        JsonHandler.sendObject(con.getOutputStream(), new User("ali@gmail.com", "ali1222345", "Ali", "akbari", "k").toJson());
         out.close();
 
         if (con.getResponseCode() / 100 == 2) {
@@ -98,5 +109,17 @@ public class RequestTest {
             System.out.println("Server returned HTTP code " + response.statusCode());
         }
         client.close();
+    }
+
+    private static HttpURLConnection getPostConnection(URL url) throws IOException {
+        HttpURLConnection con = (HttpURLConnection) url.openConnection();
+
+        con.setRequestMethod("POST");
+        con.setRequestProperty("Content-Type", "multipart/form-data");
+        con.setRequestProperty("Authorization", "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1c2VyMjM3NTBkMTQtNDdjMC1iMjIwIiwiaWF0IjoxNzE2OTg1NjA2LCJleHAiOjE3MTc1ODU2MDZ9.ej7LwjDK9sO_9XXPJk5HxH6tSrw_2enANFDosy6yOr8\n" +
+                "eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1c2VyMjM3NTBkMTQtNDdjMC1iMjIwIiwiaWF0IjoxNzE2OTg1NjA2LCJleHAiOjE3MTc1ODU2MDZ9.ej7LwjDK9sO_9XXPJk5HxH6tSrw_2enANFDosy6yOr8");
+
+        con.setDoOutput(true); // enables output stream
+        return con;
     }
 }
